--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="field"> <input type="text" name="Name"  placeholder="Your Name" required></div>
                 <div class="field"><input type="tel" name="phone"  required pattern="[0-9]{10}" placeholder="Contact Number"></div>
                 <div class="field"> <input type="text" name="companyname"  placeholder="Comapny Name" required></div>
-                <div class="button"><input type="button" value="SUBMIT NOW"></div>
+                <div class="button"><input type="submit" value="SUBMIT NOW"></div>
                </form>
         </div>
     </div>
@@ -100,7 +100,7 @@
         <form  class="lol">
                 
             <div class="email"> <input type="email" name="companyname"  placeholder="Email Address" required></div>
-            <div class="button1"><input type="button" value="Subscribe"></div>
+            <div class="button1"><input type="submit" value="Subscribe"></div>
            </form>
         </div>
     </div>
